聊天页开发基础

--- a/common/common.css
+++ b/common/common.css
@@ -17,3 +17,11 @@
 .main-text-color{
 	color: #08C060;
 }
+
+.bg-chat-item {
+	background-color: #6BEE68;
+}
+
+.text-chat-icon-item {
+	color: #6BEE68;
+}
